profilelist1exp/unpackaged/objects/Territory__c.object
<CustomObject>
    <description>This object is to create and maintain the territories for the teams that uses geography based owner assignment process for the relationship leads and Account Plays.</description>
    <fields>
        <fullName>Geography_Type__c</fullName>
        <label>Geography Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Zipcode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Client Computing</fullName>
                </value>
                <value>
                    <fullName>Dell Data Protection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_Group__c</fullName>
        <label>Territory Group</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Geography_Type__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Group_and_Geography_Type_are_required</fullName>
        <active>true</active>
        <description>This rule is to make the Group field required when created through API</description>
        <errorConditionFormula>ISPICKVAL( Group__c , &apos;&apos;) ||  ISPICKVAL( Geography_Type__c , &apos;&apos;)</errorConditionFormula>
        <errorMessage>Both the Group and Geography Type are required</errorMessage>
    </validationRules>
</CustomObject>